Form input text color fix (too hard to read with theme default)

--- a/app/assets/stylesheets/_cerberus.css.scss
+++ b/app/assets/stylesheets/_cerberus.css.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
+.form-control {
+  color: $gray-base;
+}
+
 #provideMetadataForm {
   hr {
     margin-top: 0;
